--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -6,9 +6,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.1.5.1</version>
+		<version>1.1.5.3-SNAPSHOT</version>
 	</parent>
-	<version>1.1.5.1</version>
+	<version>1.1.5.3-SNAPSHOT</version>
 	<artifactId>authentication-core</artifactId>
 	<packaging>jar</packaging>
 
@@ -27,6 +27,14 @@
 					<artifactId>
 						spring-boot-starter-security
 					</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -80,6 +88,14 @@
 					<artifactId>
 						spring-boot-starter-security
 					</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
