[MOSIP-14346] Mojor overhaul.

--- a/db_scripts/mosip_ida/deploy.properties
+++ b/db_scripts/mosip_ida/deploy.properties
@@ -1,19 +1,6 @@
-DB_SERVERIP=
-DB_PORT=9001
+DB_SERVERIP=api-internal.sandbox.mosip.net
+DB_PORT=5432
 SU_USER=postgres
-SU_USER_PWD=
 DEFAULT_DB_NAME=postgres
 MOSIP_DB_NAME=mosip_ida
-SYSADMIN_USER=sysadmin
-SYSADMIN_PWD=Mosipadm@dev123
-DBADMIN_PWD=Mosipadm@dev123
-APPADMIN_PWD=Mosipadm@dev123
-DBUSER_PWD=Mosip@dev123
-LOG_PATH=/home/madmin/logs/
-COMMON_ROLE_FILENAME=mosip_role_common.sql
-APP_ROLE_FILENAME=mosip_role_idauser.sql
-DB_CREATION_FILENAME=mosip_ida_db.sql
-ACCESS_GRANT_FILENAME=mosip_ida_grants.sql
-DDL_FILENAME=mosip_ida_ddl_deploy.sql
 DML_FLAG=1
-DML_FILENAME=mosip_ida_dml_deploy.sql
