--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -74,7 +74,7 @@
 
 		<!-- Kernel components -->
 		<kernel.parent.version>1.2.0-SNAPSHOT</kernel.parent.version>
-		<kernel-core.version>1.2.0-SNAPSHOT</kernel-core.version>
+		<kernel-core.version>${kernel.parent.version}</kernel-core.version>
 		<kernel-keymanager-service.version>${kernel.parent.version}</kernel-keymanager-service.version>
 		<kernel-idgenerator-tokenid.version>${kernel.parent.version}</kernel-idgenerator-tokenid.version>
 		<kernel-idvalidator-uin.version>${kernel.parent.version}</kernel-idvalidator-uin.version>
@@ -84,11 +84,11 @@
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
 		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
 		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
-		<kernel-cbeffutil-api.version>1.1.7-SNAPSHOT</kernel-cbeffutil-api.version>
+		<kernel-cbeffutil-api.version>${kernel.parent.version}</kernel-cbeffutil-api.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
 		<kernel-auth-adapter.version>${kernel.parent.version}</kernel-auth-adapter.version>
-		<kernel-biometrics-api.version>1.1.7-SNAPSHOT</kernel-biometrics-api.version>
-		<kernel-biosdk-provider.version>1.1.7-SNAPSHOT</kernel-biosdk-provider.version>
+		<kernel-biometrics-api.version>${kernel.parent.version}</kernel-biometrics-api.version>
+		<kernel-biosdk-provider.version>${kernel.parent.version}</kernel-biosdk-provider.version>
 		<kernel-websubclient-api.version>${kernel.parent.version}</kernel-websubclient-api.version>
 		<id-repository-core.version>1.2.0-SNAPSHOT</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
