--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -99,5 +99,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-demographics-api</artifactId>
+			<version>${kernel-demoapi.version}</version>
+		</dependency>		
 	</dependencies>
 </project>
