--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -55,16 +55,6 @@
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-idvalidator-uin</artifactId>
-			<version>${kernel-idvalidator-uin.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
-			<artifactId>kernel-idvalidator-vid</artifactId>
-			<version>${kernel-idvalidator-vid.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-idgenerator-tokenid</artifactId>
 			<version>${kernel-idgenerator-tokenid.version}</version>
 		</dependency>
@@ -125,6 +115,16 @@
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-websubclient-api</artifactId>
 			<version>${kernel-websubclient-api.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.biosdk</groupId>
+			<artifactId>biosdk-client</artifactId>
+			<version>1.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.demosdk</groupId>
+			<artifactId>demosdk</artifactId>
+			<version>1.2.0-SNAPSHOT</version>		
 		</dependency>
 	</dependencies>
 	<build>
