added dynamic roles and configured for external access.

--- a/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
@@ -37,3 +37,8 @@ server.servlet.context-path=/idauthentication/${ida.api.version}/internal
 mosip.kernel.keymanager.certificate-file-path=classpath:cert/mosipio.crt
 mosip.kernel.keymanager.privatekey-file-path=classpath:cert/mosipio.key
 mosip.kernel.keymanager.certificate-type=X509
+
+mosip.role.idauth.postauth=RESIDENT,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
+mosip.role.idauth.postverifyidentity=RESIDENT,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
+mosip.role.idauth.getauthtransactionsindividualid=RESIDENT
+mosip.role.idauth.postotp=RESIDENT
