--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -396,3 +396,6 @@ mosip.kernel.uin.length=10
 mosip.ida.allowed.enviromemnts=Staging,Developer,Pre-Production,Production
 mosip.ida.allowed.domain.uris=https://dev.mosip.net,https://qa2.mosip.net
 mosip.ida.credential.biometric.attribute.name=individualBiometrics
+mosip.mandatory-languages=eng
+mosip.optional-languages=ara,fra,fre
+mosip.default.template-languages=eng,ara,fre,fra
