Initial commit-auth filter api, auth type lock filter impl

--- a/authentication/authentication-kyc-service/pom.xml
+++ b/authentication/authentication-kyc-service/pom.xml
@@ -28,6 +28,11 @@
 			<version>${authentication-core.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.mosip.authentication</groupId>
+			<artifactId>authentication-authtypelockfilter-impl</artifactId>
+			<version>${authentication-authtypelockfilter-impl}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
