--- a/authentication/authentication-common/pom.xml
+++ b/authentication/authentication-common/pom.xml
@@ -26,6 +26,11 @@
 			<version>${kernel-core.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.mosip.authentication</groupId>
+			<artifactId>authentication-filter-api</artifactId>
+			<version>${authentication-filter-api.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-dataaccess-hibernate</artifactId>
 			<version>${kernel-dataaccess-hibernate.version}</version>
