--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -59,7 +59,9 @@
 	</repositories>
 	<modules>
 		<module>authentication-core</module>
+		<module>authentication-filter-api</module>
 		<module>authentication-common</module>
+		<module>authentication-authtypelockfilter-impl</module>
 		<module>authentication-service</module>
 		<module>authentication-internal-service</module>
 		<module>authentication-kyc-service</module>
@@ -69,7 +71,9 @@
 	<properties>
 		<authentication.parent.version>${project.version}</authentication.parent.version>
 		<authentication-core.version>${authentication.parent.version}</authentication-core.version>
+		<authentication-filter-api.version>${authentication.parent.version}</authentication-filter-api.version>
 		<authentication-common.version>${authentication.parent.version}</authentication-common.version>
+		<authentication-authtypelockfilter-impl>${authentication.parent.version}</authentication-authtypelockfilter-impl>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Kernel components -->
@@ -90,7 +94,8 @@
 		<kernel-websubclient-api.version>${kernel.parent.version}</kernel-websubclient-api.version>
 		<id-repository-core.version>1.2.0-SNAPSHOT</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
-		<kernel-demoapi.version>1.2.0-SNAPSHOT</kernel-demoapi.version>
+		<kernel-demoapi.version>${kernel.parent.version}</kernel-demoapi.version>
+		<kernel-idauthenticationfilter-api.version>${kernel.parent.version}</kernel-idauthenticationfilter-api.version>
 		<!-- Maven Plugins -->
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
