--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -24,7 +24,12 @@
 		<dependency>
 			<groupId>io.mosip.authentication</groupId>
 			<artifactId>authentication-authtypelockfilter-impl</artifactId>
-			<version>${authentication-authtypelockfilter-impl}</version>
+			<version>${authentication-authtypelockfilter-impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.authentication</groupId>
+			<artifactId>authentication-hotlistfilter-impl</artifactId>
+			<version>${authentication-hotlistfilter-impl.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
