--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -22,6 +22,16 @@
 			<version>${authentication-common.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.mosip.authentication</groupId>
+			<artifactId>authentication-authtypelockfilter-impl</artifactId>
+			<version>${authentication-authtypelockfilter-impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.authentication</groupId>
+			<artifactId>authentication-hotlistfilter-impl</artifactId>
+			<version>${authentication-hotlistfilter-impl.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
