--- a/authentication/authentication-core/pom.xml
+++ b/authentication/authentication-core/pom.xml
@@ -6,9 +6,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.2.0-rc1-SNAPSHOT</version>
+		<version>1.2.0-rc1</version>
 	</parent>
-	<version>1.2.0-rc1-SNAPSHOT</version>
+	<version>1.2.0-rc1</version>
 
 	<artifactId>authentication-core</artifactId>
 	<packaging>jar</packaging>
