MOSIP-16870 move kyc endpoints into auth service

--- a/authentication/authentication-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-service/src/main/resources/bootstrap.properties
@@ -32,7 +32,7 @@ health.config.enabled=false
 
 ida.api.version=v1
 server.port=8090
-server.servlet.context-path=/idauthentication/${ida.api.version}/auth
+server.servlet.context-path=/idauthentication/${ida.api.version}
 
 mosip.kernel.keymanager.certificate-file-path=classpath:cert/mosipio.crt
 mosip.kernel.keymanager.privatekey-file-path=classpath:cert/mosipio.key
