--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -7,6 +7,8 @@ application.id=IDA
 application.name=ID-Authentication
 otprequest.received-time-allowed.in-minutes=20
 authrequest.received-time-allowed.in-hours=20
+authrequest.received-time-allowed.seconds=30
+
 
 # *********** Otp Flooding ************
 otp.request.flooding.duration=1
